# WallShift

./: AUR-PUBLISH.md  README.md  pyproject.toml
aur/wallshift-git/: .SRCINFO  PKGBUILD
data/: io.github.olalbns.wallshift.desktop
wallshift/: __init__.py  app.py  backend.py  config.py  themes.py
